--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "axios": "^1.3.5",
     "bootstrap": "^5.3.0-alpha3",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.7",
     "jquery": "^3.6.4",
+    "jwt-decode": "^3.1.2",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1"
