--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,12 +19,13 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-yup-middleware": "^1.2.3",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
-    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.22",
     "yup": "^1.1.1"
   },
