Certificate generation and downloading frontend implementation

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,9 @@
     "bootstrap": "^5.3.0-alpha3",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.7",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
