--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "html-pdf-node": "^1.0.8",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
@@ -27,6 +28,7 @@
     "nodemailer": "^6.9.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "yup": "^1.1.1"
   },
   "description": "",
